# Little_Dawn

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONTINUE_HERE.md  README.md  VT_DEBUG_SUMMARY.md  clean_build.sh  fix_esp_idf.sh  quick_build.sh  sdkconfig  sdkconfig.defaults
components/AgIsoStack/: CMakeLists.txt
knowledge/: agiso_esp32.md  virtual_client.md
main/: CMakeLists.txt  LD12.iop  LD13.iop  LD15.iop  LD19.iop  LD20.iop  LD7.iop  esp32_logger.h  little_dawn_object_pool.cpp  little_dawn_object_pool.h  main.cpp  manual_pool.cpp  manual_pool.h  minimal_object_pool.cpp  minimal_object_pool.h  new_dawn_serial.cpp  new_dawn_serial.h  simple_object_pool.cpp  simple_object_pool.h  vt_object_ids.h  working_object_pool.cpp  working_object_pool.h
sys/: version.h
